[package]
name = "blockscanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.8", features = ["json"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.5"
bs58 = "0.5.1"
hex = "0.4"
sha2 = "0.10"
async-trait = "0.1.68"
web3 = "0.19.0"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
    "json",
] }
tracing-appender = "0.2"
config = "0.14"
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
